--- a/style.css
+++ b/style.css
@@ -45,3 +45,20 @@ h2{
 #end{
   text-align: right;
 }
+#seasonText {
+  font-size: 20px;
+  color: #336699;
+  margin-top: 15px;
+}
+
+button {
+  background-color: lightgreen;
+  padding: 10px;
+  font-weight: bold;
+}
+
+.footer {
+  font-style: italic;
+  margin-top: 30px;
+  color: #999999;
+}
